# MySteamStats

./: .gitignore  Dockerfile  README.md  pyproject.toml  tailwind.config.js
public/: CNAME
public/css/: styles.css
public/js/: filterList.js  highlight.min.js  scroll.js
public/js/components/: appHamburgerMenu.js  appList.js  appMenu.js  appScrollArrow.js  filterList.js  scrollArrow.js
server/: README.md  __main__.py  authentication.py  db.py  errors.py  pyproject.toml  requests_cache.sqlite  steamapi.py  strings.py  supported_games.py  tailwind.config.js  toasts.py
server/components/: app_button.py  app_hamburger_menu.py  app_image.py  app_input.py  app_layout.py  app_link.py  app_list.py  app_lists.py  app_logo.py  app_menu.py  app_page.py  app_scroll_arrow.py  game_card.py
server/pages/: admin_login.py  admin_panel.py  dashboard.py  email_form.py  error.py  feedback_form.py  game_stats.py  home.py  privacy_policy.py  signin.py  site_footer.py
server/server/: __main__.py  authentication.py  errors.py  steam_auth.py  steamapi.py  strings.py  supported_games.py  toasts.py  urls.py
server/server/components/: divider.py  down_arrow.py  error_icon.py  game_card.py
server/server/pages/: dashboard.py  game_stats.py  home.py  landing.py  layout.py  signin.py
server/static/css/: styles.css
server/static/js/: tailwindcss.config.js
static/css/: styles.css
